# cryoflow

./: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  LICENSE  README.md  README_ja.md  example.envrc  flake.nix  pyproject.toml
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/setup-nix/: action.yaml
.github/workflows/: bump-version.yml  cachix-push.yml  publish.yml  release.yml  test.yml
dev/: flake.nix
docs/: cicd.md  cicd_ja.md  implements_step_plan.md  implements_step_plan_ja.md  input_plugin.md  input_plugin_ja.md  plugin_development.md  plugin_development_ja.md  progress.md  spec.md  spec_ja.md
docs/archives/: implements_step_plan_ja.md  progress_ja.md
examples/: config.toml  generate_sample_data.py  generate_sensor_data.py
examples/data/: README.md  output.parquet  sample_sales.ipc  sample_sales.parquet  sensor_readings.parquet
