[project]
name = "cryoflow"
version = "0.0.1"
description = "Plug-in-driven column-oriented data processing CLI tool with Polars LazyFrame at its core."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.37.1",
    "cryoflow-core",
    "cryoflow-sample-plugin",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cryoflow-core = { workspace = true }
cryoflow-sample-plugin = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
