[project]
name = "cryoflow"
version = "0.1.4"
description = "Plug-in-driven column-oriented data processing CLI tool with Polars LazyFrame at its core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.37.1",
    "cryoflow-core",
    "cryoflow-plugin-collections",
]

[project.scripts]
cryoflow = "cryoflow_core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cryoflow-core = { workspace = true }
cryoflow-plugin-collections = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/cryoflow-core/tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "numpy>=2.4.1",
]
